- bios/bios.c bios/startup.S: Renamed cartscan() to run_cartridge_applications()
  and improved application cartridge comments. (VRI)

2011-11-14
- Makefile: Now "make 192" and "make 256" get the right compile options and
  produce the expected filename. Override the language with UNIQUE=xx. (VRI)

2011-11-19
- bios/asmdefs.h: Moved to include/. (VRI)
- */*.c */*.S: Included config.h at the top of every .c file and asmdefs.h at
  the top of every .S file. (VRI)
- Makefile: Simplified building the dirs list according to the features. (VRI)
- bios/bios.c bios/startup.S cli/coma.S: Added the ability to compile with both
  WITH_AES=0 and WITH_CLI=0. Such ROM is still able to run AUTO and bootstrap
  programs. (VRI)
- Makefile: Removed now useless ROMSIZE autodetection. (VRI)
- Makefile: Beautified the compile command line. (VRI)
- Makefile: Added the ROMSIZE define, in kilobytes. (VRI)
- Makefile desk/desk1.c include/config.h: Moved the definition of DESK1 to
  config.h. (VRI)
- Makefile include/config.h: Moved the special TOS_VERSION for 192 KB ROMs into
  config.h. (VRI)
- desk/desk_rsc.c desk/deskapp.c desk/deskins.c desk/deskmain.c desk/icons.c
  include/config.h: Added the new defines CONF_WITH_DESKTOP_ICONS and
  CONF_WITH_EASTER_EGG instead of testing the TOS version. (VRI)
- Makefile include/config.h: Removed the ROMSIZE define as it broke the non-ROM
  targets. Added TARGET_192, TARGET_256 and TARGET_512 instead. (VRI)
- Makefile doc/readme-floppy.txt: Fixed "make flop" to implicitly use UNIQUE=us.
 (VRI)
- desk/deskinf.c: Fixed random character after am/pm in EmuDesk windows in 
  "view as text" mode.
- desk/deskapp.h desk/deskconf.h desk/deskfpd.h desk/deskwin.h: Allow up to 7
  windows on the standard (not fixed window) desktop. (RFB)

2011-11-21
- bios/lineainit.c bios/screen.c bios/screen.h: Set up Videl chip correctly for
  all valid Falcon video modes. (RFB)
- aes/gemgsxif.c: Menu/alert screen buffer is now always 25% of screen memory
  size. (RFB)